# haskell-back-end

./: README.md  public-client-back-end.cabal  stack.yaml  start.sh  watch-lint.sh  watch.sh
app/: Main.hs
