name:                public-client-back-end
version:             0.1.0.0
synopsis:            "A back-end to provide a REST API and websocket connection to the public-client"
description:         "A back-end to provide a REST API and websocket connection to the public-client"
homepage:            https://github.com/AntouanK/haskell-back-end
license:             BSD3
license-file:        LICENSE
author:              Antonis Karamitros
maintainer:          ablackjim228@gmail.com
copyright:           2018 Antonis Karamitros
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  build-depends:       base
                     , bytestring
                     , utf8-string
                     , text
                     , time
  default-language:    Haskell2010

executable public-client-back-end-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , bytestring
                     , utf8-string
                     , text
                     , http-client-tls
                     , http-conduit
                     , wai
                     , yesod
                     , yesod-auth
                     , yesod-form
                     , monad-logger
                     , persistent
                     , persistent-template
                     , persistent-postgresql
                     , time
                     , public-client-back-end
  default-language:    Haskell2010

Test-Suite test-public-client-back-end
  hs-source-dirs:      test
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  other-modules:       Utilities
  build-depends:       base
                     , bytestring
                     , hspec
                     , hedis
                     , utf8-string
                     , regex-compat
                     , aeson
                     , public-client-back-end
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/AntouanK/haskell-back-end


